# distributed_pipeline_example

./: .env.example  .env.template  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  Makefile  PROJECT_SPEC.md  Phase1.md  README.md  TEST_PLAN.md  lefthook.yml
.aws/: github-oidc.json  github-oidc.txt  iam.txt  iam_permissions.codeartifact.json  iam_permissions.codeartifact.txt  iam_permissions.json  iam_permissions.txt  iam_trust_policy.json  iam_trust_policy.txt  publish-codeartifact.txt
.devcontainer/: .Dockerfile.swp  Dockerfile  devcontainer.json  editor_features.json  editor_features_simple.json
.github/workflows/: build-push.yml  ci.yml  pre-commit.yml  publish-codeartifact.yml
infra/tofu/aws/: main.tf
infra/tofu/eks/: main.tf
infra/tofu/openshift/: main.tf
infra/tofu/rke2-local/: main.tf
pipeline_common/: pyproject.toml
pipeline_common/src/pipeline_common/: __init__.py
pipeline_common/src/pipeline_common/annotations/: __init__.py
pipeline_common/src/pipeline_common/manifest/: __init__.py
pipeline_common/src/pipeline_common/metrics/: __init__.py
pipeline_common/src/pipeline_common/nvme/: __init__.py
pipeline_common/src/pipeline_common/s3/: __init__.py
pipeline_common/tests/: test_pipeline_common.py
scripts/: configure_env.py  dev-bash.sh  functional_test_harness.py  setup.sh
stage1/: Dockerfile  pyproject.toml
stage1/src/stage1/: __init__.py
stage2/: Dockerfile  pyproject.toml
stage2/src/stage2/: __init__.py
stage2/tests/: test_stage2.py
stage3/: Dockerfile  pyproject.toml
stage3/src/stage3/: __init__.py
stage4/: Dockerfile  pyproject.toml
stage4/src/stage4/: __init__.py
